# mlp-in-c

./: CMakeLists.txt  main.c
